--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "multer": "^1.3.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "session-file-store": "^1.2.0"
   }
 }
